filter tcp/udp port

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -2,7 +2,7 @@ ccflags-y = -g -O0
 
 obj-m += simplefirewall.o
 
-simplefirewall-y := ip.o cidr.o procfs.o netfilter.o main.o 
+simplefirewall-y := ip.o cidr.o port.o procfs.o netfilter.o main.o 
 
 #KDIR := /lib/modules/$(shell uname -r)/build
 KDIR = /home/r/Desktop/work/runninglinuxkernel_5.0
