--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -2,10 +2,10 @@ ccflags-y = -g -O0
 
 obj-m += simplefirewall.o
 
-simplefirewall-y := ip.o procfs.o netfilter.o main.o 
+simplefirewall-y := ip.o cidr.o port.o procfs.o netfilter.o main.o 
 
-KDIR := /lib/modules/$(shell uname -r)/build
-#KDIR = /home/r/Desktop/work/runninglinuxkernel_5.0
+#KDIR := /lib/modules/$(shell uname -r)/build
+KDIR = /home/r/Desktop/work/runninglinuxkernel_5.0
 PWD := $(shell pwd)
 
 default:
